--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Quora - Save to Pocket",
     "version": "0.0.1",
     "manifest_version": 2,
-    "description": "Save Quora Answers, Questions and Posts to Pocket",
+    "description": "Save Quora Answers, Questions and Blog Posts to Pocket",
     "homepage_url": "https://github.com/suryatech/Quora-Save-To-Pocket",
     "icons": {
         "16": "icons/icon16.png",
@@ -41,6 +41,7 @@
         "js": [
             "js/jquery/jquery.min.js",
             "js/jquery.noty.packaged.min.js",
+            "js/relax.js",
             "js/inject.js"
         ]
     }]
